# DynFirework

./: .gitignore  README.md  basic_fireworks.py  default.py  export_mcfunction.py  firework_trajectories.py  global_storage.py  gui.py  main.py  pyproject.toml  requirements.txt  shared_functions.py  templates.md
arch/: PKGBUILD  dynfirework.desktop
dyn/: __main__.py  cli.py  env.py  logging_config.py  main.py
dyn/actions/: about.py  export_datapack.py  help.py  new_project.py  project_settings.py
dyn/components/: element_browser.py  inspector.py  property_panel.py  transport_bar.py
dyn/help/: 01-overview.md  02-01-function.md  02-02-datapack.md  02-03-commands.md  02-04-time-unit.md  03-01-trajectory.md  03-02-firework.md  03-03-traj-firework.md  04-01-trajectory-params.md  04-02-firework-params.md  05-01-timeline.md  05-03-panel.md  05-08-position-selector.md  06-faq.md  07-shortcuts.md  08-优秀作品.md
dyn/lib/: __init__.py  backend_registry.py  base_class.py  export_helpers.py  export_mcfunction.py  file_format.py  firework_class_test.py  fireworks.py  global_storage.py  integrity.py  shared_functions.py  special_effects.py  trajectories.py  units.py
dyn/models/: __init__.py  elements.py  project.py  timeline.py
dyn/service/: audio_service.py  element_controller.py  export_service.py  metronome.py  playback_controller.py  project_manager.py  undo_manager.py
dyn/ui/: df_about.ui  df_about_ui.py  (+6 more)
gui/: __init__.py  datapack_form.py  validators.py
test_pack/: pack.mcmeta
tests/: __init__.py  test_integration.py  test_lib.py  test_models.py  test_service.py
(+301 files in other folders)
