[project]
name = "dynfirework"
version = "1.3.0"
description = "Minecraft 粒子烟花设计工具 - 基于 PySide6，生成 .mcfunction 数据包"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "numpy>=1.24",
    "scipy>=1.10",
    "soundfile>=0.12",
    "Pillow>=9.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
dynfirework = "dyn.main:main"
dynfirework-cli = "dyn.cli:main"

[tool.setuptools.packages.find]
include = ["dyn", "dyn.*"]

[tool.setuptools.package-data]
dyn = ["help/**/*.md", "resources/**/*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
